feat(conversation): add batch manage and bulk delete UX

--- a/src/renderer/i18n/locales/en-US.json
+++ b/src/renderer/i18n/locales/en-US.json
@@ -236,7 +236,23 @@
       "cancelDelete": "No",
       "editName": "Edit Name",
       "saveName": "Save Name",
-      "cancelEdit": "Cancel Edit"
+      "cancelEdit": "Cancel Edit",
+      "batchManage": "Manage",
+      "batchManageTitle": "Manage your chats in bulk",
+      "batchDone": "Done",
+      "batchModeHint": "Use Ctrl / Cmd for multi-select, and Shift for range select.",
+      "batchManageTooltip": "Manage chats (bulk select and delete)",
+      "batchSelected": "{{count}} selected",
+      "selectAll": "Select All",
+      "clearSelection": "Clear",
+      "batchDelete": "Delete",
+      "batchDeleteTitle": "Delete chats",
+      "batchDeleteConfirm": "Delete {{count}} selected chats?",
+      "batchDeleteModalDesc": "You are deleting {{count}} chats. This action cannot be undone:",
+      "batchDeleteMore": "and {{count}} more chats...",
+      "batchDeleteSuccess": "Deleted {{count}} chats",
+      "batchDeletePartial": "Deleted {{success}}, failed {{failed}}",
+      "batchDeleteFailed": "Failed to delete selected chats"
     },
     "tabs": {
       "closeAll": "Close All",
