--- a/src/renderer/i18n/locales/ja-JP.json
+++ b/src/renderer/i18n/locales/ja-JP.json
@@ -360,7 +360,23 @@
       "yesterday": "昨日",
       "editName": "名前を編集",
       "saveName": "名前を保存",
-      "cancelEdit": "編集をキャンセル"
+      "cancelEdit": "編集をキャンセル",
+      "batchManage": "一括管理",
+      "batchManageTitle": "チャットを一括管理",
+      "batchDone": "完了",
+      "batchModeHint": "Ctrl / ⌘ で複数選択、Shift で範囲選択",
+      "batchManageTooltip": "チャット管理（一括選択・削除）",
+      "batchSelected": "{{count}} 件選択中",
+      "selectAll": "すべて選択",
+      "clearSelection": "選択解除",
+      "batchDelete": "一括削除",
+      "batchDeleteTitle": "チャットを一括削除",
+      "batchDeleteConfirm": "選択した {{count}} 件のチャットを削除しますか？",
+      "batchDeleteModalDesc": "{{count}} 件のチャットを削除しようとしています。この操作は元に戻せません：",
+      "batchDeleteMore": "さらに {{count}} 件...",
+      "batchDeleteSuccess": "{{count}} 件のチャットを削除しました",
+      "batchDeletePartial": "{{success}} 件削除、{{failed}} 件失敗",
+      "batchDeleteFailed": "選択したチャットの削除に失敗しました"
     },
     "tabs": {
       "closeAll": "すべて閉じる",
