--- a/src/renderer/i18n/locales/ko-KR.json
+++ b/src/renderer/i18n/locales/ko-KR.json
@@ -235,7 +235,23 @@
       "cancelDelete": "아니요",
       "editName": "이름 편집",
       "saveName": "이름 저장",
-      "cancelEdit": "편집 취소"
+      "cancelEdit": "편집 취소",
+      "batchManage": "일괄 관리",
+      "batchManageTitle": "대화를 일괄 관리",
+      "batchDone": "완료",
+      "batchModeHint": "Ctrl / ⌘ 로 다중 선택, Shift 로 범위 선택",
+      "batchManageTooltip": "대화 관리 (일괄 선택 및 삭제)",
+      "batchSelected": "{{count}}개 선택됨",
+      "selectAll": "전체 선택",
+      "clearSelection": "선택 해제",
+      "batchDelete": "일괄 삭제",
+      "batchDeleteTitle": "대화 일괄 삭제",
+      "batchDeleteConfirm": "선택한 {{count}}개의 대화를 삭제하시겠습니까?",
+      "batchDeleteModalDesc": "{{count}}개의 대화를 삭제하려고 합니다. 이 작업은 되돌릴 수 없습니다:",
+      "batchDeleteMore": "그리고 {{count}}개 더...",
+      "batchDeleteSuccess": "{{count}}개의 대화를 삭제했습니다",
+      "batchDeletePartial": "{{success}}개 삭제, {{failed}}개 실패",
+      "batchDeleteFailed": "선택한 대화 삭제에 실패했습니다"
     },
     "tabs": {
       "closeAll": "모두 닫기",
