--- a/src/renderer/i18n/locales/tr-TR.json
+++ b/src/renderer/i18n/locales/tr-TR.json
@@ -242,7 +242,23 @@
       "cancelDelete": "Hayır",
       "editName": "İsmi Düzenle",
       "saveName": "İsmi Kaydet",
-      "cancelEdit": "Düzenlemeyi İptal Et"
+      "cancelEdit": "Düzenlemeyi İptal Et",
+      "batchManage": "Toplu Yönet",
+      "batchManageTitle": "Sohbetlerini toplu yönet",
+      "batchDone": "Bitti",
+      "batchModeHint": "Çoklu seçim için Ctrl / ⌘, aralık seçimi için Shift kullanın",
+      "batchManageTooltip": "Sohbetleri yönet (toplu seçim ve silme)",
+      "batchSelected": "{{count}} seçildi",
+      "selectAll": "Tümünü Seç",
+      "clearSelection": "Seçimi Temizle",
+      "batchDelete": "Toplu Sil",
+      "batchDeleteTitle": "Sohbetleri sil",
+      "batchDeleteConfirm": "Seçilen {{count}} sohbet silinsin mi?",
+      "batchDeleteModalDesc": "{{count}} sohbeti silmek üzeresiniz. Bu işlem geri alınamaz:",
+      "batchDeleteMore": "ve {{count}} sohbet daha...",
+      "batchDeleteSuccess": "{{count}} sohbet silindi",
+      "batchDeletePartial": "{{success}} silindi, {{failed}} başarısız",
+      "batchDeleteFailed": "Seçili sohbetler silinemedi"
     },
     "tabs": {
       "closeAll": "Tümünü Kapat",
