--- a/src/renderer/i18n/locales/zh-CN.json
+++ b/src/renderer/i18n/locales/zh-CN.json
@@ -233,7 +233,23 @@
       "cancelDelete": "否",
       "editName": "编辑名称",
       "saveName": "保存名称",
-      "cancelEdit": "取消编辑"
+      "cancelEdit": "取消编辑",
+      "batchManage": "批量管理",
+      "batchManageTitle": "批量管理你的对话",
+      "batchDone": "完成",
+      "batchModeHint": "按住 Ctrl / ⌘ 可多选，按住 Shift 可范围选择",
+      "batchManageTooltip": "管理对话（支持批量选择和删除）",
+      "batchSelected": "已选 {{count}} 项",
+      "selectAll": "全选",
+      "clearSelection": "取消全选",
+      "batchDelete": "批量删除",
+      "batchDeleteTitle": "批量删除对话",
+      "batchDeleteConfirm": "确定删除已选中的 {{count}} 个对话吗？",
+      "batchDeleteModalDesc": "你正在删除 {{count}} 个对话。删除后不可恢复，请确认：",
+      "batchDeleteMore": "以及另外 {{count}} 个对话...",
+      "batchDeleteSuccess": "已删除 {{count}} 个对话",
+      "batchDeletePartial": "已删除 {{success}} 个，失败 {{failed}} 个",
+      "batchDeleteFailed": "批量删除失败"
     },
     "tabs": {
       "closeAll": "关闭全部",
