--- a/src/renderer/i18n/locales/zh-TW.json
+++ b/src/renderer/i18n/locales/zh-TW.json
@@ -331,7 +331,23 @@
       "yesterday": "昨天",
       "editName": "編輯名稱",
       "saveName": "儲存名稱",
-      "cancelEdit": "取消編輯"
+      "cancelEdit": "取消編輯",
+      "batchManage": "批量管理",
+      "batchManageTitle": "批量管理你的對話",
+      "batchDone": "完成",
+      "batchModeHint": "按住 Ctrl / ⌘ 可多選，按住 Shift 可範圍選擇",
+      "batchManageTooltip": "管理對話（支援批量選擇與刪除）",
+      "batchSelected": "已選 {{count}} 項",
+      "selectAll": "全選",
+      "clearSelection": "取消全選",
+      "batchDelete": "批量刪除",
+      "batchDeleteTitle": "批量刪除對話",
+      "batchDeleteConfirm": "確定刪除已選中的 {{count}} 個對話嗎？",
+      "batchDeleteModalDesc": "你正在刪除 {{count}} 個對話。刪除後不可恢復，請確認：",
+      "batchDeleteMore": "以及另外 {{count}} 個對話...",
+      "batchDeleteSuccess": "已刪除 {{count}} 個對話",
+      "batchDeletePartial": "已刪除 {{success}} 個，失敗 {{failed}} 個",
+      "batchDeleteFailed": "批量刪除失敗"
     },
     "tabs": {
       "closeAll": "全部關閉",
