--- a/src/renderer/i18n/locales/ja-JP.json
+++ b/src/renderer/i18n/locales/ja-JP.json
@@ -456,7 +456,13 @@
       "agentDescTelegram": "Telegram の会話に使用",
       "autoFollowCliModel": "CLI実行時のモデルに自動的に従う",
       "agentSwitched": "Agent が切り替わりました。続けて使用するには、このチャンネルの履歴会話を削除してください。新しい会話では新しい設定が使用されます。（次のバージョンでは自動ホットアップデートがサポートされます）",
-      "modelSwitched": "モデルが切り替わりました。続けて使用するには、このチャンネルの履歴会話を削除してください。新しい会話では新しい設定が使用されます。（次のバージョンでは自動ホットアップデートがサポートされます）"
+      "modelSwitched": "モデルが切り替わりました。続けて使用するには、このチャンネルの履歴会話を削除してください。新しい会話では新しい設定が使用されます。（次のバージョンでは自動ホットアップデートがサポートされます）",
+      "copyCode": "ペアリングコードをコピー",
+      "modelSaved": "モデルを保存しました",
+      "modelSaveFailed": "モデルの保存に失敗しました",
+      "tokenLocked": "設定を変更する前に、Channel を閉じてすべての承認済みユーザーを削除してください",
+      "tokenValid": "Token が有効です",
+      "defaultModel": "デフォルトモデル"
     },
     "assistants": "アシスタント",
     "assistantsList": "利用可能なアシスタント一覧",
